--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="app">
       <!-- TOP HEADER -->
-      <div class="top-header d-flex justify-content-between align-items-center">
+      <div class="top-header">
         <div class="text-start d-flex gap-2 flex-wrap">
           <span><img src="./src/assets/lk.png" class="flag-icon" alt="Sri Lanka" style="height: 30px"> Sri Lanka</span>
           <span><img src="./src/assets/au.png" class="flag-icon" alt="Australia" style="height: 30px"> Australia</span>
@@ -46,26 +46,61 @@
         <img src="./src/assets/jeep.jpg" class="w-100 hero-image" />
         <div class="overlay"></div>
 
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-dark position-absolute top-0 start-0 w-100 px-5 py-3" style="z-index: 2;">
-          <div class="container-fluid d-flex justify-content-between align-items-center">
-            <ul class="navbar-nav d-flex flex-row gap-4">
-              <li class="nav-item" v-for="(link, index) in links.slice(0, 4)" :key="'left-' + index">
-                <a class="nav-link text-white fw-semibold" href="#">{{ link }}</a>
-              </li>
-            </ul>
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark position-absolute top-0 start-0 w-100 px-3 py-2" style="z-index: 10;">
+  <div class="container-fluid d-flex justify-content-between align-items-center">
 
-            <div class="navbar-brand mx-auto">
-              <img src="./src/assets/hiru-logo.png" alt="Hiru Car" style="height: 20px;">
-            </div>
+    <!-- Mobile Logo -->
+    <a class="navbar-brand d-lg-none" href="#">
+      <img src="./src/assets/hiru-logo.png" alt="Hiru Car" style="height: 20px;">
+    </a>
 
-            <ul class="navbar-nav d-flex flex-row gap-4">
-              <li class="nav-item" v-for="(link, index) in links.slice(4)" :key="'right-' + index">
-                <a class="nav-link text-white fw-semibold" href="#">{{ link }}</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <!-- Toggler (Mobile Only) -->
+    <button class="navbar-toggler border-0 d-lg-none " type="button" onclick="toggleOverlay()">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Desktop Navbar -->
+    <div class="d-none d-lg-flex w-100 justify-content-between align-items-center px-4">
+      <!-- Left Nav Links -->
+      <ul class="navbar-nav flex-row gap-4">
+        <li class="nav-item" v-for="(link, index) in links.slice(0, 4)" :key="'left-' + index">
+          <a class="nav-link text-white fw-semibold" href="#">{{ link }}</a>
+        </li>
+      </ul>
+
+      <!-- Center Logo (Desktop Only) -->
+      <div class="navbar-brand mx-auto position-absolute start-50 translate-middle-x">
+        <img src="./src/assets/hiru-logo.png" alt="Hiru Car" style="height: 20px;">
+      </div>
+
+      <!-- Right Nav Links -->
+      <ul class="navbar-nav flex-row gap-4">
+        <li class="nav-item" v-for="(link, index) in links.slice(4)" :key="'right-' + index">
+          <a class="nav-link text-white fw-semibold" href="#">{{ link }}</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Mobile Fullscreen Overlay -->
+<div id="navbarOverlay" class="navbar-overlay d-lg-none">
+  <!-- Close Button Only -->
+  <div class="d-flex justify-content-end px-4 pt-3">
+    <button class="btn text-white fs-1 fw-bold border-0" onclick="toggleOverlay()">&times;</button>
+  </div>
+
+  <!-- Mobile Nav Links -->
+  <ul class="navbar-nav mt-5 gap-4 text-center">
+    <li class="nav-item" v-for="(link, index) in links" :key="'mobile-' + index">
+      <a class="nav-link text-white fw-semibold fs-5" href="#" @click="closeOverlay">{{ link }}</a>
+    </li>
+  </ul>
+</div>
+
+
+
 
         <!-- SEARCH PANEL -->
         <div class="search-panel position-absolute top-50 start-0 translate-middle-y text-white px-4 py-4 rounded-4" style="z-index: 2;">
@@ -79,7 +114,7 @@
             <div class="col-6"><select class="form-select rounded-3 fw-semibold"><option>Chassis ID</option></select></div>
             <div class="col-6"><select class="form-select rounded-3 fw-semibold"><option>Start Price</option></select></div>
 
-            <div class="d-flex flex-wrap justify-content-between mb-3 gap-4">
+            <div class="logo-scroll d-flex flex mb-3 gap-">
               <img src="./src/assets/nissan.png" alt="Nissan" style="height: 60px;">
               <img src="./src/assets/toyota.png" alt="Toyota" style="height: 60px;">
               <img src="./src/assets/bmw.png" alt="BMW" style="height: 60px;">
@@ -113,11 +148,11 @@
       </section>
 
       <!-- BROWSE BY BRAND -->
-      <section class="browse-section py-3 bg-light">
+      <section class="browse-section py-5 bg-light">
         <div class="container">
           <h2 class="mb-4">Browse by Brand</h2>
           <div class="row g-4">
-            <div class="col-6 col-md-2" v-for="(brand, index) in brands" :key="index">
+            <div class="col-6 col-md-4 col-lg-2 mb-4" v-for="(brand, index) in brands" :key="index">
               <div class="type-box position-relative overflow-hidden rounded shadow">
                 <img :src="brand.image" :alt="brand.name" class="brand-logo mx-auto d-block">
                 <h6 class="name-title text-center text-dark mt-2">
@@ -378,7 +413,7 @@
 
       <!-- Right: Google Map -->
       <div class="col-md-7">
-        <div class="ratio ratio-16x9 rounded-4 shadow overflow-hidden" style="min-height: 100px; border-radius: 1rem; max-width: 90%;">
+        <div class="ratio ratio-16x9 rounded-4 shadow overflow-hidden w-100">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126746.77868503048!2d79.7735006!3d6.9270786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596ed635e0d1%3A0x7cb045ef4968d00d!2sColombo!5e0!3m2!1sen!2slk!4v1683542241347!5m2!1sen!2slk"
             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -461,8 +496,8 @@
 
     <!-- Footer Bottom -->
     <hr class="border-light my-4">
-    <div class="row justify-content-between">
-      <div class="col-md-6 text-start small">
+    <div class="row justify-content-center text-center text-md-start">
+      <div class="col-12 col-md-6 mb-2">
         &copy; 2025 Hiru Cars. All Rights Reserved.
       </div>
       <div class="col-md-6 text-end small">
@@ -656,8 +691,31 @@ const app = Vue.createApp({
     }
   }
 });
+
+  function toggleOverlay() {
+    const overlay = document.getElementById('navbarOverlay');
+    overlay.classList.toggle('show');
+    document.body.style.overflow = overlay.classList.contains('show') ? 'hidden' : '';
+  }
+
+  // For closing on link click using Vue's event
+  function closeOverlay() {
+    const overlay = document.getElementById('navbarOverlay');
+    overlay.classList.remove('show');
+    document.body.style.overflow = '';
+  }
+    window.addEventListener('scroll', function () {
+    const navbar = document.querySelector('.navbar');
+    if (window.scrollY > 10) {
+      navbar.classList.add('scrolled');
+    } else {
+      navbar.classList.remove('scrolled');
+    }
+  });
 app.mount('#app');
 </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
   </body>
+
 </html>
