style:Removed hover effect

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
       <!-- News -->
       <section class="browse-section py-5 bg-light">
-        <div class="container-news">
+        <div class="container-news-fluid">
           <h2 class="mb-4">News</h2>
           <div class="row g-4">
             <div class="col-12 col-md-4">
